--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,20 @@
 {
-  "name": "VibeCal",
-  "short_name": "VibeCal",
-  "description": "A private, offline-first personal calendar.",
-  "start_url": "/index.html",
-  "scope": "/",
+  "name": "Vibe Calendar",
+  "short_name": "Calendar",
+  "start_url": "./",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#020617",
-  "theme_color": "#111827",
+  "theme_color": "#020617",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     }
   ]
 }
