--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,12 @@
 {
   "name": "Vibe Calendar",
-  "short_name": "Calendar",
+  "short_name": "VibeCal",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#020617",
   "theme_color": "#020617",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+  "icons":[
+    {"src":"icon-192.png","sizes":"192x192","type":"image/png"},
+    {"src":"icon-512.png","sizes":"512x512","type":"image/png"}
   ]
 }
